--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@xyflow/react": "^12.3.1",
+    "axios": "^1.7.7",
     "firebase": "^10.14.0",
+    "openai": "^4.67.1",
     "react": "^18.3.1",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.3.1",
